KPilot news. This file lists only major releases &c.
For more detailed information and musings, see the
ChangeLog or the README files.

* January 20, 2002: KPilot 4.3.0b still isn't ready for release.
* April 8, 2001: KPilot 4.2.2 released with KDE 2.2a1.
* February 12, 2001: KPilot 4.0.0 released with KDE 2.1.
* 2000: KPilot 3.2.1 released. This is the last KDE 1.x release.

