@@ -2,6 +2,8 @@ KPilot news. This file lists only major releases &c.
 For more detailed information and musings, see the
 ChangeLog or the README files.
 
+* May 23, 2002: KPilot 4.3.2 seems ok now. It's too late for
+  KDE 3.0.1. It should still work for KDE 2.2.2.
 * January 20, 2002: KPilot 4.3.0b still isn't ready for release.
 * April 8, 2001: KPilot 4.2.2 released with KDE 2.2a1.
 * February 12, 2001: KPilot 4.0.0 released with KDE 2.1.
